# abcfood-fingerprint

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
config/: machines.yml
docker/: Dockerfile  entrypoint.sh
scripts/: backup-fingerprints.sh  install-rmm.ps1  install-service.ps1  install-windows.ps1  secure-env.ps1  sync-attendance.sh
src/abcfood_fingerprint/: __init__.py  __main__.py  config.py  main.py
src/abcfood_fingerprint/api/: __init__.py  app.py  deps.py  middleware.py
src/abcfood_fingerprint/api/routes/: __init__.py  attendance.py  backup.py  devices.py  fingerprints.py  users.py
src/abcfood_fingerprint/cli/: __init__.py  attendance.py  backup.py  device.py  finger.py  user.py
src/abcfood_fingerprint/core/: __init__.py  attendance.py  backup.py  cache.py  device_manager.py  fingerprint.py  scheduler.py  user_sync.py
src/abcfood_fingerprint/storage/: __init__.py  s3.py
src/abcfood_fingerprint/utils/: __init__.py  logging.py  notifications.py
src/abcfood_fingerprint/zk/: __init__.py  client.py  models.py  pool.py
tests/: conftest.py  test_config.py  test_zk_client.py
